--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <div class="container">
+  <div class="title">
+    <svg viewBox="0 0 500 500">
+      <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+      <text width="500">
+        <textPath xlink:href="#curve">
+          Random Quote Generator
+        </textPath>
+      </text>
+    </svg>
+  </div>
   <div class="content-box">
     <div class="top-area">
       <div class="quote-box" *ngIf="value">
