--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,8 +3,28 @@
     width: 100vw;
     background-color: darkcyan;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.title {
+    margin: 20px 0px 30px 0px;
+    height: 25%;
+    width: 43%;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 35px;
+}
+
+path {
+    fill: transparent;
+}
+
+text {
+    fill: beige;
+    font-family: fantasy;
+    font-size: 41px;
+    text-shadow: 6px -1px chocolate;
 }
 
 .content-box {
